--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Lesson 2 | CartoDB.js | CartoDB</title>
+    <title>NYU mHealth Tobacco Viewer</title>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
     <link rel="shortcut icon" href="http://cartodb.com/assets/favicon.ico" />
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.11.1/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="http://libs.cartocdn.com/cartodb.js/v3/3.15/themes/css/cartodb.css" />
     <link rel="stylesheet" href="http://jqueryui.com/resources/demos/style.css">
-    <link rel="stylesheet" href="http://academy.cartodb.com/css/cdbui.css">
+   <!--  <link rel="stylesheet" href="http://academy.cartodb.com/css/cdbui.css"> -->
 
     <style>
       html, body {
@@ -22,25 +22,6 @@
         padding: 0;
         margin: 0;
       }
-     /* #dashboard {
-        height: 33%;
-        padding: 25px;
-        margin: 0;
-        border-top: 2px solid #333;
-      }
-      #dash {
-        margin: 25px 0;
-        width: 400px;
-      }
-      button {
-        margin-right: 10px;
-        font-family: "Proxima Nova W01", "Helvetica Neue", Helvetica, Arial, sans-serif;
-        background: transparent;
-      }
-      p {
-        font-size: 17px;
-        margin-bottom: 10px;
-      }*/
     </style>
 
     <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
@@ -51,7 +32,7 @@
   <body>
     <div id="map"></div>
 <!--     <div id="dashboard">
-        <h3 class="Title Title--xs">CartoDB.js from the ground up, Lesson 2</h3>
+        <h3 class="Title Title--xs">NYU mHealth Tobacco Viewer</h3>
     </div> -->
 
     <!-- include cartodb.js library -->
@@ -79,33 +60,33 @@
         sublayers: [{
           sql: "SELECT * FROM warnings_dc", // warning letters
           cartocss: '#warnings_dc{ marker-fill-opacity: 0.9;marker-line-color: #FFF;marker-line-width: 1;marker-line-opacity: 1;marker-placement: point;marker-type: ellipse;marker-width: 10;marker-fill: #FF9900;marker-allow-overlap: true;}'
-        // },
-        // {
-        //   sql: "SELECT * FROM ne_50m_lakes", // Natural and artificial lakes
-        //   cartocss: '#ne_50m_lakes {polygon-fill: #0000FF;}'
+        },
+        {
+          sql: "SELECT * FROM cmp_dc", // cmps
+          cartocss: '#cmp_dc{ marker-fill-opacity: 0.9;marker-line-color: #FFF;marker-line-width: 1;marker-line-opacity: 1;marker-placement: point;marker-type: ellipse;marker-width: 10;marker-fill: #850200;marker-allow-overlap: true;}'
         }]
       }
 
       // For storing the sublayers
       var sublayers = [];
 
-      // Pull tiles from OpenStreetMap
-      L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-        attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
+      // Pull tiles from Stamen - Figure out how to do MapBox
+      L.tileLayer('http://tile.stamen.com/toner/{z}/{x}/{y}.png', {
+          attribution: 'Stamen'
       }).addTo(map_object);
 
       // Add data layer to your map
       cartodb.createLayer(map_object,layerSource)
         .addTo(map_object)
-        .done(function(layer) {
-          for (var i = 0; i < layer.getSubLayerCount(); i++) {
-            sublayers[i] = layer.getSubLayer(i);
-            alert("Congrats, you added sublayer #" + i + "!");
-          } 
-        })
-        .error(function(err) {
-          console.log("error: " + err);
-        });
+        // .done(function(layer) {
+        //   for (var i = 0; i < layer.getSubLayerCount(); i++) {
+        //     sublayers[i] = layer.getSubLayer(i);
+        //     alert("Congrats, you added sublayer #" + i + "!");
+        //   } 
+        // })
+        // .error(function(err) {
+        //   console.log("error: " + err);
+        // });
     }
 
     </script>
