--- a/index.html
+++ b/index.html
@@ -30,10 +30,12 @@
 
   </head>
   <body>
+    <p>Layer controls</p>
+    <div id="buttons">
+      <button id="sublayer0" class="Btn Btn--l Btn--blue"><span>Toggle Warnings</span></button>
+      <button id="sublayer1" class="Btn Btn--l Btn--blue"><span>Toggle CMPs</span></button>
+    </div>
     <div id="map"></div>
-<!--     <div id="dashboard">
-        <h3 class="Title Title--xs">NYU mHealth Tobacco Viewer</h3>
-    </div> -->
 
     <!-- include cartodb.js library -->
     <script src="http://libs.cartocdn.com/cartodb.js/v3/3.15/cartodb.js"></script>
@@ -78,15 +80,38 @@
       // Add data layer to your map
       cartodb.createLayer(map_object,layerSource)
         .addTo(map_object)
-        // .done(function(layer) {
-        //   for (var i = 0; i < layer.getSubLayerCount(); i++) {
-        //     sublayers[i] = layer.getSubLayer(i);
-        //     alert("Congrats, you added sublayer #" + i + "!");
-        //   } 
-        // })
-        // .error(function(err) {
-        //   console.log("error: " + err);
-        // });
+
+        //store sublayer in variable with index number
+        .done(function(layer) {
+          for (var i = 0; i < layer.getSubLayerCount(); i++) {
+            sublayers[i] = layer.getSubLayer(i);
+            //alert("Congrats, you added sublayer #" + i + "!");
+          } 
+        })
+        .error(function(err) {
+          console.log("error: " + err);
+        });
+
+        //Toggle On/Off Layers
+        var sublayer0Shown = true;
+        $("#sublayer0").on('click', function() {
+            if (sublayer0Shown) {
+                sublayers[0].hide();
+            } else {
+                sublayers[0].show();
+            }
+            sublayer0Shown = !sublayer0Shown; 
+        });
+
+        var sublayer1Shown = true;
+        $("#sublayer1").on('click', function() {
+            if (sublayer1Shown) {
+                sublayers[1].hide();
+            } else {
+                sublayers[1].show();
+            }
+            sublayer1Shown = !sublayer1Shown; 
+        });
     }
 
     </script>
