--- a/index.html
+++ b/index.html
@@ -126,3 +126,10 @@
     </script>
   </body>
 </html>
+
+Layer selection code block:  
+http://bl.ocks.org/andrewxhill/10506396  
+
+Select by location:  
+http://academy.cartodb.com/courses/sql-postgis/postgis-in-cartodb/
+
