comment out geojson test

--- a/index.html
+++ b/index.html
@@ -54,10 +54,11 @@
         }]     
       }
 
-      var sql = new cartodb.SQL({ user: 'legacy', format: 'geojson' });
-      sql.execute("SELECT * FROM store_count_by_zip").done(function(geojson) {
-        console.log("here is the geojson", geojson);
-      });
+      //TESTING Getting geojson - works
+      // var sql = new cartodb.SQL({ user: 'legacy', format: 'geojson' });
+      // sql.execute("SELECT * FROM store_count_by_zip").done(function(geojson) {
+      //   console.log("here is the geojson", geojson);
+      // });
 
     </script>
 
