comment out block that works

--- a/index.html
+++ b/index.html
@@ -60,6 +60,15 @@
       //   console.log("here is the geojson", geojson);
       // });
 
+      //Blank function - works
+      // var sql = new cartodb.SQL({ user: 'legacy', format: 'geojson' });
+      // sql.execute("SELECT * FROM store_count_by_zip").done(function(geojson){
+
+      // });
+
+
+      
+
     </script>
 
 
